Upgrade to Junit5 with coverage data